# tgqq-forwarder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: __init__.py  config.py  logging_config.py  main.py
app/qq_official/: __init__.py  client.py  models.py  sender.py
app/rules/: __init__.py  formatter.py  keywords.py  matcher.py  models.py  service.py  templates.py
app/storage/: db.py  models.py  repositories.py
app/telegram_admin/: __init__.py  auth.py  bot.py  commands.py
app/telegram_user/: __init__.py  accounts.py  album_buffer.py  client.py  dialog_cache.py  event_parser.py  login.py  media_downloader.py
app/web/: app.py  auth.py  errors.py  schemas.py  server.py
app/web/static/: api.js  app.js  components.js  index.html  state.js  styles.css
app/web/static/views/: dashboard.js  logs.js  rule-studio.js  rules.js  system.js
app/worker/: forward_queue.py  media_cleanup.py
tests/: test_admin_commands.py  test_album_buffer.py  test_db.py  test_event_parser.py  test_forward_queue_dedupe.py  test_forward_queue_resilience.py  test_media_downloader.py  test_mini_app_api.py  test_mini_app_auth.py  test_mini_app_schemas.py  test_qq_sender.py  test_rules.py  test_settings.py
