[project]
name = "tgqq-forwarder"
version = "0.1.0"
description = "将指定 Telegram 用户账号消息转发到 QQ 官方机器人 WebSocket 目标会话。"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "aiofiles>=25.1.0",
  "aiosqlite>=0.21.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "python-telegram-bot>=22.5",
  "qq-botpy>=1.2.1",
  "sqlalchemy[asyncio]>=2.0.41",
  "sqlmodel>=0.0.24",
  "telethon>=1.42.0",
  "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.15.0",
]

[project.scripts]
tgqq-forwarder = "app.main:cli"
tgqq-login = "app.telegram_user.login:cli"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
